Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-499

Thrift_protocol PHP extension does not handle signedness correctly

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.2
    • PHP - Library
    • None
    • Patch Available

    Description

      The PHP Thrift protocol extension does not correctly unserialize integers - it assumes they're unsigned, but all integers in Thrift are signed.

      Attachments

        1. thrift_protocol_signedness.patch
          0.8 kB
          Russ Garrett
        2. thrift_protocol_signedness.patch
          0.9 kB
          Russ Garrett

        Activity

          People

            russ Russ Garrett
            russ Russ Garrett
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: